# maxtikzlib

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/maxtikzlib/: figure.py  logo.py
src/maxtikzlib/console/: main.py
src/maxtikzlib/tests/unit/: test_app.py  test_tikz_generation.py
tutorials/: 00_tutorial_logo.py
