[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxtikzlib"
version = "0.1"
description = "Python interface to generate (readable) Tikz figures."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["python"]
authors = [{name = "Max"}]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "matplotlib",
    "black",
    "isort",
    "ruff",
    "pytest",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]
[project.urls]
"Source" = "https://github.com/max-models/maxtikzlib"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
maxtikzlib = "maxtikzlib.console.main:main"